# Self-RAG-Bio-Medical-Research-Assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile
backend/app/api/: main.py  queue.py
backend/app/eval/: check_data.py  find_questions.py  run_eval.py  show_results.py
backend/app/llm/: client.py
backend/app/observability/: __init__.py  tracing.py
backend/app/rag/: cli.py  graph.py
backend/app/retrieval/: check_retrieval.py  db.py  embeddings.py  hybrid_search.py  ingest.py  ingest_labeled.py  schema.sql
backend/tests/: test_eval.py  test_graph.py  test_llm.py  test_rate_limiter.py  test_retrieval.py
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  AnswerCard.tsx  AskForm.tsx  KPICards.tsx  LoadingSpinner.tsx  Navbar.tsx
