[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["UP006"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
